# EveryBoard

./: .eslintrc.ci.js  .eslintrc.js  .eslintrc.json  .gitignore  .travis.yml  CONTRIBUTING.md  CONVENTION.md  CONVENTIONS.txt  LICENSE  PROJECT_ARCHITECTURE.MD  README.md  angular.json  deploy.sh  deps.txt  firebase.json  index.html  netlify.toml  package-lock.json  package.json  q  revue.diff  tsconfig.json  tslint.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.firebase/: hosting.YXBw.cache  hosting.ZGlzdA.cache  hosting.aG9zdGluZw.cache  hosting.bXlhbmd1bGFyZXhhbXBsZQ.cache  hosting.cGFudHM.cache
.github/: firebaseConfig.ts.gpg
.github/actions/: setup.yml
.github/workflows/: ci-cd.yml  develop.yml  master-pr.yml  master.yml
.netlify/: firebaseConfig.ts  firebaseConfig.ts.gpg
.travis/: deploy.sh  firebaseConfig.ts.enc  id_rsa.enc  id_rsa.pub
MGPFunction/: .firebaserc
backend/: .dockerignore  .ocamlformat  .ocp-indent  Dockerfile  Dockerfile.build  Dockerfile.serve  Makefile  README.md  auth.ml  auth.re  backend.opam  bisect441731981.coverage  bisect445232131.coverage  configRoom.ml  configRoomEndpoint.ml  cors.ml  domain.ml  dune  elo.ml  external.ml  firebase.ml  firebase_ops.ml  firebase_primitives.ml  firestore.ml  firestorePrimitives.ml  game.ml  gameEndpoint.ml  googleCertificates.ml  google_certificates.ml  jwt.ml  main.ml  options.ml  server.ml  serverUtils.ml  stats.ml  test_utils.ml  tokenRefresher.ml  token_refresher.ml  utils.ml
backend/test-data/: corrupted-service-account.json  service-account.json
backend/tests/: authTests.ml  auth_tests.ml  configRoomEndpointTests.ml  configRoomTests.ml  corsTests.ml  domainTests.ml  eloTests.ml  externalTests.ml  firebase_ops_tests.ml  firebase_primitives_tests.ml  firebase_tests.ml  firestorePrimitivesTests.ml  firestoreTests.ml  gameEndpointTests.ml  gameTests.ml  googleCertificatesTests.ml  google_certificates_tests.ml  integrationTests.ml  integration_tests.ml  jwtTests.ml  jwt_tests.ml  serverUtilsTests.ml  statsTests.ml  testUtils.ml  test_utils.ml  tests.ml  tokenRefresherTests.ml  token_refresher_tests.ml  utilsTests.ml
coverage/: branches.csv  functions.csv  lines.csv  statements.csv
data/: firebase-export-metadata.json  i_am_bad_at_git.txt
data/auth_export/: accounts.json
data/firestore_export/: firestore_export.overall_export_metadata
doc/: architecture.md
e2e/: e2e.py  e2e.sh  launch-and-watch.sh  launch.py  protractor.conf.js
e2e/src/: app.e2e-spec.ts
functions/: index.ts
lib/: package-lock.json  package.json  tsconfig.json
lib/.nyc_output/: 4295ad2d-e881-4715-a46c-d918f7362739.json
load-test/: README.md  launch.py  locustfile.py
maintenance/: index.html
rules/: firestore.json  firestore.test.json
scripts/: backend_needs_deployment.sh  build.sh  check-images.sh  check-translations.py  check-translations.sh  coverage.py  create-users.py  deploy.sh  games.txt  max-uncovered.py  rename-collection.py  screenshot.py  square-image.py  start-in-emulator.sh  test.sh  update-images.sh  update-translations.sh
src/: TestVars.ci.spec.ts  TestVars.spec.ts  index.html  karma.conf.js  main.ts  material-modules.ts  polyfills.ts  styles.css  test.ts  tsconfig.spec.json
translations/: messages.fr.xlf  messages.xlf
(+2215 files in other folders)
