(library
 (name backend)
 (libraries dream yojson ppx_deriving_yojson.runtime mirage-crypto-pk x509 cohttp cohttp-lwt-unix)
 (modules Utils TokenRefresher Jwt Auth GoogleCertificates Firestore FirestorePrimitives Game External Server Options Cors Stats Domain)
 (instrumentation (backend bisect_ppx))
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))

(executable
 (name main)
 (modules Main)
 (libraries backend dream))

(tests
 (names tests)
 (modules Tests TestUtils AuthTests JwtTests GoogleCertificatesTests TokenRefresherTests FirestoreTests FirestorePrimitivesTests IntegrationTests DomainTests)
 (libraries backend alcotest alcotest-lwt))

(include_subdirs unqualified)
